# kursach

./: alembic.ini  pyproject.toml
alembic/: env.py
app/: config.py  crud.py  database.py  logs.py  main.py
app/models/: database.py  users.py
app/routers/: customer.py  executor.py  order.py
app/utils/: db.ddl  helpers.py  token_decode.py
migrations/: env.py
migrations/versions/: 1d528f17f86e_rename_tables.py  1f8b6facf661_ids_to_uuidlast.py  23a423ff02f6_added_wallet_and_order_type.py  61b3cd54be7c_.py  6bf9f4e7ea99_ids_to_uuid.py  935be10f6488_added_order_table.py  a3eca0c2a888_ids_to_uuid2.py  c381ddbc4dd7_added_account_table.py  ffb0f9bc2f44_executor.py
